pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingSetSeparator.pkl
set = Set(1, 2  3, 4)